--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PORT=9118
 # PUBLIC_IP is the IP address will be used to select the interface on which Pmbot will be exposed
 # Use 0.0.0.0 to listen on all interfaces
 # Use 127.0.0.1 to limit to the loopback interface (localhost)
-PUBLIC_IP=127.0.0.1
+PUBLIC_IP=0.0.0.0
 
 # This is the host and port part of the URL on which Pmbot will be available
 # (you may remove the port if you are using the default http or https port)
@@ -33,8 +33,8 @@ REVERSE_PROXY_VERSION=latest
 BACKEND_VERSION=latest
 FRONTEND_VERSION=latest
 
-PREMIUM_SUFFIX="" # "-developer" or "-enterprise" for premium users
-REPOSITORY="" # "docker.pmbot.io/" if you are using premium
+BACKEND_SUFFIX="-community" # "-community" for community users, "-developer" or "-enterprise" for premium users
+REPOSITORY="" # "docker.pmbot.io/" if you are using premium,
 
 # RESTART_POLICY tells Docker if it should restart Pmbot containers when they crash or when the computer is restarted
 RESTART_POLICY=unless-stopped
